--- a/.github/workflows/python-api.yml
+++ b/.github/workflows/python-api.yml
@@ -25,6 +25,7 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
+
       - name: Run tests
         run: |
-          pytest test
+          pytest tests
