--- a/.github/workflows/python-api.yml
+++ b/.github/workflows/python-api.yml
@@ -1,31 +1,26 @@
-name: Run Tests
-
-on:
-  push:
-    branches:
-      - main
-      - 'feature/**'
-  pull_request:
-
+name: CI - Pytest
+ 
+on: [push, pull_request, workflow_dispatch]
+ 
 jobs:
   test:
     runs-on: ubuntu-latest
-
+ 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
+      - name: Check out repository
+        uses: actions/checkout@v4
+ 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
-
+          python-version: "3.10"
+ 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-
+          pip install -r requirements.txt
+ 
       - name: Run tests
-        run: |
-          pytest tests
+        run: pytest tests/
+        env:
+          PYTHONPATH: .
