--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-name: CD
+name: CD-to-DockerHub
 on:
   push:
     branches: [ main ]
@@ -6,11 +6,15 @@ on:
 jobs:
   docker-deploy:
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v4
-    - name: Login to GHCR
-      run: echo "${{ github.token }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-    - name: Build and push
+
+    - name: Login to Docker Hub
       run: |
-        docker build -t ghcr.io/${{ github.repository_owner }}/python-app:latest .
-        docker push ghcr.io/${{ github.repository_owner }}/python-app:latest
+        echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+    - name: Build and push image
+      run: |
+        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/python-app:latest .
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/python-app:latest
