--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-name: CD-to-DockerHub
+name: CD
 on:
   push:
     branches: [ main ]
@@ -6,15 +6,11 @@ on:
 jobs:
   docker-deploy:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
-
-    - name: Login to Docker Hub
+    - name: Login to GHCR
+      run: echo "${{ github.token }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+    - name: Build and push
       run: |
-        echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-
-    - name: Build and push image
-      run: |
-        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/python-app:latest .
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/python-app:latest
+        docker build -t ghcr.io/${{ github.repository_owner }}/python-app:latest .
+        docker push ghcr.io/${{ github.repository_owner }}/python-app:latest
