--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,11 +6,17 @@ on:
 jobs:
   docker-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      
     steps:
     - uses: actions/checkout@v4
+    
     - name: Login to GHCR
       run: echo "${{ github.token }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      
     - name: Build and push
       run: |
-        docker build -t ghcr.io/${{ github.repository_owner }}/python-app:latest .
-        docker push ghcr.io/${{ github.repository_owner }}/python-app:latest
+        docker build -t ghcr.io/kyjsio/python-app:latest .
+        docker push ghcr.io/kyjsio/python-app:latest
